--- a/update.html
+++ b/update.html
@@ -15,16 +15,11 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <h2 class="logo">Employee_Management</h2>
+                <h2 class="logo">Employee_Management_System</h2>
             </div>
 
             <div class="menu">
-                <ul>
-                    <li><a href="update.html">UPDATE</a></li>
-                    <li><a href="add.html">ADD</a></li>
-                    <li><a href="index.html">DELETE</a></li>
-
-                </ul>
+         
 
             </div>
 <h1>UPDATE_Employee</h1>
