--- a/index.html
+++ b/index.html
@@ -1,81 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Management</title>
+    <title>Employee_Management_System</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-
     <div class="main">
-        <div class="navbar">
-            <div class="icon">
-                <h2 class="logo">Employee_Management_System</h2>
-            </div>
-            <h1>Employee_List</h1>
-            <div class="menu">
+        <h1>Employee_Management_System</h1>
 
-                <table>
-                    <thead>
-                        <tr>
-                            <b>
-                                <th>Name</th>
-                            </b>
-                            <b>
-                                <th>ID</th>
-                            </b>
-                            <b>
-                                <th>Date</th>
-                            </b>
-                            <b>
-                                <th>Action</th>
-                            </b>
-                            <b>
-                                <th>Action</th>
-                            </b>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>name</td>
-                            <td>1</td>
-                            <td>2022-03-15</td>
-                            <td><button>Delete</button></td>
-                            <td><button>update</button></td>
-                        </tr>
-                        <tr>
-                            <td>name</td>
-                            <td>2</td>
-                            <td>2022-03-18</td>
-                            <td><button>Delete</button></td>
-                            <td><button>update</button></td>
-                        </tr>
-                        <tr>
-                            <td>name</td>
-                            <td>3</td>
-                            <td>2022-03-21</td>
-                            <td><button>Delete</button></td>
-                            <td><button>update</button></td>
-                        </tr>
-                        <tr>
-                            <td>name</td>
-                            <td>4</td>
-                            <td>2022-03-21</td>
-                            <td><button>Delete</button></td>
-                            <td><button onclick="location.href='update.html'">update</button></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <center>
+            <form id="emp-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" required><br>
+                <label for="date">Date:</label>
+                <input type="date" id="date" required><br>
+                <button type="submit">Add Client</button>
+            </form>
+        </center>
 
-                <button id="add" onclick="location.href='add.html'">Add</button>
+        <table id="emp-table">
+            <h2>Employee_Data_List</h2>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Date</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+    <script>
+        const form = document.getElementById("emp-form");
+        const table = document.getElementById("emp-table");
+        let clients = [];
 
-            </div>
-        </div>
+        form.addEventListener("submit", function (event) {
+            event.preventDefault();
+            const nameInput = document.getElementById("name");
+            const dateInput = document.getElementById("date");
+            const id = clients.length + 1;
+            const client = { id, name: nameInput.value, date: dateInput.value };
+            clients.push(client);
+            nameInput.value = "";
+            dateInput.value = "";
+            renderClients();
+        });
+
+        function renderClients() {
+            table.querySelector("tbody").innerHTML = "";
+            for (const client of clients) {
+                const row = document.createElement("tr");
+                row.innerHTML = `
+          <td>${client.id}</td>
+          <td>${client.name}</td>
+          <td>${client.date}</td>
+          <td>
+            <button type="button" onclick="editClient(${client.id})">Edit</button>
+             <button type="button" onclick="deleteClient(${client.id})">Delete</button>
+          </td>
+        `;
+                table.querySelector("tbody").appendChild(row);
+            }
+        }
+
+        function deleteClient(id) {
+            const confirmed = confirm("Are you sure you want to delete this data?");
+
+            if (confirmed) {
+                clients = clients.filter(client => client.id !== id);
+
+
+
+                renderClients();
+            }
+        }
+
+
+        function editClient(id) {
+
+            let index = clients.findIndex((client) => client.id === id);
+
+            let name = clients[index].name;
+            let date = clients[index].date;
+
+            document.getElementById("name").value = name;
+            document.getElementById("date").value = date;
+
+            clients.splice(index, 1);
+            updateTable();
+        }
+
+    </script>
     </div>
 </body>
 
