--- a/index.html
+++ b/index.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Employee_Management_System</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Employee Management System</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    @media (max-width: 768px) {
+      .main {
+        width: 100%;
+        margin: 0;
+      }
+      table {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 24px;
+      }
+      table {
+        font-size: 12px;
+      }
+    }
+  </style>
 </head>
 
 <body>
-    <div class="main">
-        <h1>Employee_Management_System</h1>
 
-        <center>
-            <form id="emp-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" required><br>
-                <label for="date">Date:</label>
-                <input type="date" id="date" required><br>
-                <button type="submit">Add Client</button>
-            </form>
-        </center>
+  <div class="main">
+    <h1>Employee Management System</h1>
 
-        <table id="emp-table">
-            <h2>Employee_Data_List</h2>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Date</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-    <script>
-        const form = document.getElementById("emp-form");
-        const table = document.getElementById("emp-table");
-        let clients = [];
+    <center>
+      <form id="emp-form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required><br>
+        <label for="date">Date:</label>
+        <input type="date" id="date" required><br>
+        <button type="submit">Add Client</button>
+      </form>
+    </center>
 
-        form.addEventListener("submit", function (event) {
-            event.preventDefault();
-            const nameInput = document.getElementById("name");
-            const dateInput = document.getElementById("date");
-            const id = clients.length + 1;
-            const client = { id, name: nameInput.value, date: dateInput.value };
-            clients.push(client);
-            nameInput.value = "";
-            dateInput.value = "";
-            renderClients();
-        });
+    <table id="emp-table">
+      <h2>Employee Data List</h2>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Date</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
 
-        function renderClients() {
-            table.querySelector("tbody").innerHTML = "";
-            for (const client of clients) {
-                const row = document.createElement("tr");
-                row.innerHTML = `
+  <script>
+    const form = document.getElementById("emp-form");
+    const table = document.getElementById("emp-table");
+    let clients = [];
+
+    form.addEventListener("submit", function(event) {
+      event.preventDefault();
+      const nameInput = document.getElementById("name");
+      const dateInput = document.getElementById("date");
+      const id = clients.length + 1;
+      const client = {
+        id,
+        name: nameInput.value,
+        date: dateInput.value
+      };
+      clients.push(client);
+      nameInput.value = "";
+      dateInput.value = "";
+      renderClients();
+    });
+
+    function renderClients() {
+      table.querySelector("tbody").innerHTML = "";
+      for (const client of clients) {
+        const row = document.createElement("tr");
+        row.innerHTML = `
           <td>${client.id}</td>
           <td>${client.name}</td>
           <td>${client.date}</td>
@@ -65,39 +92,36 @@
              <button type="button" onclick="deleteClient(${client.id})">Delete</button>
           </td>
         `;
-                table.querySelector("tbody").appendChild(row);
-            }
-        }
+        table.querySelector("tbody").appendChild(row);
+      }
+    }
 
-        function deleteClient(id) {
-            const confirmed = confirm("Are you sure you want to delete this data?");
+    function deleteClient(id) {
+      const confirmed = confirm("Are you sure you want to delete this data?");
 
-            if (confirmed) {
-                clients = clients.filter(client => client.id !== id);
+      if (confirmed) {
+        clients = clients.filter(client => client.id !== id);
 
+        renderClients();
+      }
+    }
 
+    function editClient(id) {
 
-                renderClients();
-            }
-        }
+      let index = clients.findIndex((client) => client.id === id);
 
+      let name = clients[index].name;
+      let date = clients[index].date;
 
-        function editClient(id) {
+      document.getElementById("name").value = name;
+      document.getElementById("date").value = date;
 
-            let index = clients.findIndex((client) => client.id === id);
+      clients.splice(index, 1);
+      updateTable();
+    }
 
-            let name = clients[index].name;
-            let date = clients[index].date;
+  </script>
 
-            document.getElementById("name").value = name;
-            document.getElementById("date").value = date;
-
-            clients.splice(index, 1);
-            updateTable();
-        }
-
-    </script>
-    </div>
 </body>
 
 </html>
